k8s/vault-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hashicorp-vault
  labels:
    name: hashicorp-vault
